# local-cli-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ADDING_TOOLS.md  ARCHITECTURE.md  CONCEPTS.md
local_cli_agent/: __init__.py  agent.py  config.py  main.py
local_cli_agent/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
local_cli_agent/tools/: __init__.py  base.py  calculator.py  create_note.py  database_query.py  file_search.py  git_status.py  http_request.py  list_directory.py  read_file.py  run_shell.py  web_search.py  word_count.py  write_file.py
